<resources>
    <string name="app_name">SmartList</string>
    <string name="try_again">Попробовать снова</string>
    <string name="profile_title">Профиль</string>
    <string name="lists_title">Списки</string>
    <string name="registration_title">Регистрация</string>
    <string name="Continue_title">Продолжить</string>
    <string name="enter_phone_number_title">Ведите номер телефона</string>
    <string name="enter_code_title">Ведите код</string>
    <string name="enter_name_title">Введите имя</string>
    <string name="field_is_empty">Пустое поле</string>
    <string name="generic_exception">Что то пошло не так</string>
    <string name="recaptcha_exception">Recaptcha завершилась с ошибкой</string>
    <string name="no_internet_exception">Соединение с интернетом отсутствует</string>
    <string name="invalid_code">"Неверный код "</string>
    <string name="create_new_list_content_description">создать новый список</string>
    <string name="done_cont_desc">done</string>
    <string name="all_lists_title">Все списки</string>
    <string name="create_new_list">Создайте свой первый список</string>
    <string name="go_back_content_desc">назад</string>
    <string name="add_members_cont_desc">добавить пользователей</string>
    <string name="details_item_date">%1$s - %2$s</string>
    <string name="confirm_content_desc">Подтвердить</string>
    <string name="enter_name_of_product">Введите название продукта*</string>
    <string name="enter_correct_date_of_product">Введите допустимую дату изготовления продукта</string>
    <string name="date_from_title">От</string>
    <string name="date_to_title">До</string>
    <string name="enter_product_count">Введите количество продукта</string>
    <string name="members_title">Участники</string>
    <string name="confirm_add_member">Вы уверены что хотите добавить данного пользователя?</string>
    <string name="confirm_delete_list">Вы действительно хотите выйти и удалить данный список?</string>
    <string name="confirm_delete_item">Вы действительно хотетите удалить данный продукт?</string>
    <string name="enter_name_hint">введите имя</string>
    <string name="add_name_title">Изменить имя</string>
    <string name="logout_title">выйти</string>
    <string name="enter_list_name_title">Введите название</string>
    <string name="create_list_title">Создать</string>
    <string name="sever_unavailable">Неполадки с серверов, попробуйте позже</string>
</resources>